--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@student) do |f| %>
-    <%= f.label 'First Name'%><br>
+    <%= f.label :first_name %><br>
     <%= f.text_field :first_name %><br>
-    <%= f.label 'Last Name'%><br>
-    <%= f.text_feild :last_name %><br>
-    <%= f.submit %>
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name %><br>
+    <%= f.submit 'Update Student' %>
   <% end %>
