--- a/app/views/school_classes/edit.html.erb
+++ b/app/views/school_classes/edit.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@school_class) do |f| %>
-    <%= f.label 'Title'%><br>
+  <%= f.label :title %><br>
     <%= f.text_field :title %><br>
-    <%= f.label 'Room Number' %><br
-    <%= f.text_feild :room_number %><br>
-    <%= f.submit %>
+    <%= f.label :room_number %><br>
+    <%= f.text_field :room_number %><br>
+    <%= f.submit "Update School class" %>
   <% end %>
