--- a/app/views/school_classes/new.html.erb
+++ b/app/views/school_classes/new.html.erb
@@ -1,10 +1,8 @@
 <h3>School Class Form</h3>
 <%= form_for(@school_class) do |f| %>
-    <%= f.label 'Title' %><br>
+    <label>Title:</label><br>
     <%= f.text_field :title %><br>
-  
-    <%= f.label 'Room Number' %><br>
-    <%= f.text_area :room_number %><br>
-  
+    <label>Room Number:</label><br>
+    <%= f.text_field :room_number %><br>
     <%= f.submit "Create School class" %>
-  <% end %>
+<% end %>
