--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,10 +1,8 @@
-<h3>Student Form Form</h3>
+<h1>Student Form</h1>
 <%= form_for(@student) do |f| %>
-    <%= f.label 'First Name' %><br>
+    <label>First Name:</label><br>
     <%= f.text_field :first_name %><br>
-  
-    <%= f.label 'Last Name' %><br>
-    <%= f.text_area :last_name %><br>
-  
-    <%= f.submit %>
+    <label>Last Name:</label><br>
+    <%= f.text_field :last_name %><br>
+    <%= f.submit "Create Student" %>
   <% end %>
