--- a/app/views/school_classes/edit.html.erb
+++ b/app/views/school_classes/edit.html.erb
@@ -1,7 +1,9 @@
-<%= form_for(@school_class) do |f| %>
+<%= form_for @school do |f| %>
     <%= f.label :title %><br>
     <%= f.text_field :title %><br>
+
     <%= f.label :room_number %><br>
     <%= f.text_field :room_number %><br>
+    
     <%= f.submit "Update School class" %>
   <% end %>
